# tap-clickup

./: .gitignore  LICENSE  README.md  meltano.yml  postgres-podman.sh  pyproject.toml  tap_clickup.sh  tox.ini
.github/workflows/: ci.yml
schema-parser/: README.md  requirements.txt  resolver.py
tap_clickup/: auth.py  client.py  streams.py  tap.py
tap_clickup/schemas/: custom_field.json  folder.json  goal.json  list.json  shared.json  space.json  tag.json  task.json  task_template.json  team.json  time_entries.json
tap_clickup/tests/: __init__.py  archived_task.json  archived_task_two.json  catalog.json  task.json  task_two.json  test_core.py  test_state.py  test_streams.py
