[tool.poetry]
name = "tap-clickup"
version = "0.0.1"
description = "`tap-clickup` is a Singer tap for ClickUp"
authors = ["AutoIDM"]
license = ""

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-clickup = 'tap_clickup.tap:TapClickUp.cli'
