[tool.poetry]
name = "tap-clickup"
version = "0.0.2"
description = "tap-clickup is a Singer tap for ClickUp by AutoIDM at www.autoidm.com"
authors = ["AutoIDM"]
license = ""

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.9.0"
tox = "^3.23.1"
codecov = "^2.1.11"
pylint = "2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-clickup = 'tap_clickup.tap:TapClickUp.cli'
