[tool.poetry]
name = "tap-clickup"
version = "0.0.16"
description = "tap-clickup is a Singer tap for ClickUp by AutoIDM"
authors = ["AutoIDM"]
maintainers = ["AutoIDM"]
license = ""
readme = "README.md"
homepage = "https://autoidm.com"
repository = "https://github.com/AutoIDM/tap-clickup"
documentation = "https://github.com/AutoIDM/tap-clickup"
keywords = [
    "AutoIDM",
    "Auto IDM",
    "tap-clickup",
    "clickup",
    "tap",
    "singer",
    "sdk"
]

[tool.poetry.urls]
"Issues" = "https://github.com/AutoIDM/tap-clickup/issues"
"Twitter" = "https://twitter.com/AutoIDM"
"Youtube" = "https://www.youtube.com/channel/UCk4lfv8fZ4rMlYzw9N_FM0g"
"LinkedIn" = "https://www.linkedin.com/company/68741135"

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "0.3.13"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^21.12b0", allow-prereleases = true}
flake8 = "^3.9.0"
tox = "^3.23.1"
codecov = "^2.1.11"
pylint = "2.10.2"

[tool.pytest.ini_options]
log_cli = 1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-clickup = 'tap_clickup.tap:TapClickUp.cli'
